# wavpack-numcodecs

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/scripts/: install-wavpack-linux.sh  install-wavpack-macos.sh
.github/workflows/: build-wavpack-binaries.yml  build-wavpack.yml  publish-to-pypi.yml  python-package-binaries.yml  python-package-cython.yml  python-package-multi-threading.yml  python-package-no-cython.yml  python-package.yml
libraries/windows-x86_32/: wavpackdll.lib
libraries/windows-x86_64/: wavpackdll.lib
src/wavpack_numcodecs/: __init__.py  compat_ext.c  compat_ext.pyx  wavpack.c
src/wavpack_numcodecs/libraries/5.7.0/windows-x86_32/: wavpackdll.lib
src/wavpack_numcodecs/libraries/5.7.0/windows-x86_64/: wavpackdll.lib
src/wavpack_numcodecs/src/: encoder.c
tests/: test_imports.py  test_wavpack_codec.py
wavpack_numcodecs/: __init__.py  compat_ext.c  decoder.c  encoder.c  globals.py  wavpack.c  wavpack.pyx
wavpack_numcodecs/src/: decoder.c  encoder.c
